--- a/app/src/main/res/layout/activity_login_view_rider.xml
+++ b/app/src/main/res/layout/activity_login_view_rider.xml
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edt_email_login_rider" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_login_rider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -90,7 +90,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button">
+        app:layout_constraintTop_toBottomOf="@+id/btn_login_rider">
 
         <TextView
             android:layout_width="wrap_content"
