Fixed some bugs

--- a/app/src/main/res/layout/activity_login_view_rider.xml
+++ b/app/src/main/res/layout/activity_login_view_rider.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/login_container_rider"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -44,6 +45,7 @@
         android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="15dp"
         android:hint="email"
+        android:inputType="textEmailAddress"
         android:textColor="#ffffff"
         android:textColorHint="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +63,7 @@
         android:drawableLeft="@drawable/ic_password"
         android:drawablePadding="15dp"
         android:hint="password"
+        android:inputType="textPassword"
         android:textColor="#ffffff"
         android:textColorHint="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
