--- a/app/src/main/res/layout/activity_login_view_rider.xml
+++ b/app/src/main/res/layout/activity_login_view_rider.xml
@@ -47,7 +47,7 @@
         android:hint="email"
         android:inputType="textEmailAddress"
         android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
+        android:textColorHint="#99ffffff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -65,7 +65,7 @@
         android:hint="password"
         android:inputType="textPassword"
         android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
+        android:textColorHint="#99ffffff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_email_login_rider" />
