--- a/app/src/main/res/layout/activity_login_view_rider.xml
+++ b/app/src/main/res/layout/activity_login_view_rider.xml
@@ -98,7 +98,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Don't have an account?     "
+            android:text="Don't have an account?   "
             android:textColor="#ffffff" />
 
         <TextView
@@ -108,5 +108,17 @@
             android:text="Sign up "
             android:textColor="#06c3ed" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progress_login_rider"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:indeterminate="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="0dp" />
 
 </android.support.constraint.ConstraintLayout>
