Added image upload code

--- a/app/src/main/res/layout/activity_rider_profile_setup.xml
+++ b/app/src/main/res/layout/activity_rider_profile_setup.xml
@@ -31,7 +31,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Select a profile image and provide a user name which will be displayed on your profile"
+        android:text="Select a profile image and provide a user name and phone number which will be displayed on your profile"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +62,7 @@
         android:backgroundTint="@color/colorAccent"
         android:hint="User name"
         android:textAlignment="center"
+        android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
