--- a/app/src/main/res/layout/activity_rider_main_map.xml
+++ b/app/src/main/res/layout/activity_rider_main_map.xml
@@ -49,7 +49,7 @@
         android:layout_marginRight="26dp"
         android:layout_marginBottom="16dp"
         android:background="@color/colorPrimary"
-        android:text="Confirm Location ?"
+        android:text="Confirm ride to this location ?"
         android:textColor="@color/colorAccent" />
 
 </FrameLayout>
