--- a/app/src/main/res/drawable/location_search_background.xml
+++ b/app/src/main/res/drawable/location_search_background.xml
@@ -3,6 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#ffffff"/>
+            <corners android:radius="5dp"/>
         </shape>
     </item>
 </selector>
